fix requirements (add unclecheese/display-logic), fixes #2

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
 		"homepage": "https://innoweb.com.au"
 	}],
 	"require": {
-		"silverstripe/cms": "^4"
+		"silverstripe/cms": "^4",
+		"unclecheese/display-logic": "^2.0.4",
 	},
 	"autoload": {
 		"psr-4": {
