--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
 	}],
 	"require": {
 		"silverstripe/cms": "^4",
-		"unclecheese/display-logic": "^2.0.4",
+		"unclecheese/display-logic": "^2.0.4"
 	},
 	"autoload": {
 		"psr-4": {
